--- a/index1.html
+++ b/index1.html
@@ -133,7 +133,7 @@
         <div class="row justify-content-evenly section bg-qu-4">
             <div class=".col-xl-6 .col-lg-6 .col-md-6 .col-sm-12 .col-12 flex-parent">
                 <p class="pt"></p>
-                <p class="pe-4 uc edu-font" dir="ltr">Look, they are coming. Can you see ..... ?.</p>
+                <p class="pe-4 uc edu-font" dir="ltr">Look, they are coming. Can you see ..... ?</p>
             
                 <ul class="answer-ul">
                     <li class="answer-li pe-4 lc edu-font">their<input class="ckeckBox-li" type="checkbox" id="nc7" onclick="funcCheckBox()"></li>
