--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>
     
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-    <title>Possessive Adjectives-1 </title>
+    <title>Objective pronouns-1 </title>
 </head>
 <body class="mainparent">
     <div class="container-fluid"> 
